--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://3.34.53.55:3306/test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
     username: yerimlocaltest
-    password: yerimlocaltest
+    password: ${RDS_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: create-drop
