feat: Dockerfile 작성

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ java {
 	}
 }
 
+bootJar { enabled = true }
+jar { enabled = false }
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
