--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://3.34.53.55:3306/test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-    username: yerim
+    username: yerimlocaltest
     password: ${RDS_PASSWORD}
   jpa:
     hibernate:
