--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://3.34.53.55:3306/test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-    username: yerimlocaltest
+    url: jdbc:mariadb://172.31.0.100:3306/test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: yerim
     password: ${RDS_PASSWORD}
   jpa:
     hibernate:
